add doc-listener to drag demos

--- a/draggabilly.html
+++ b/draggabilly.html
@@ -94,6 +94,7 @@
 <script src="components/eventie/eventie.js"></script>
 <script src="components/classie/classie.js"></script>
 <script src="components/eventEmitter/EventEmitter.js"></script>
+<script src="components/doc-listener/doc-listener.js"></script>
 <script src="components/draggabilly/draggabilly.js"></script>
 <script src="js/rect.js"></script>
 <script src="js/packer.js"></script>
