--- a/draggable.html
+++ b/draggable.html
@@ -86,6 +86,7 @@
 <script src="components/classie/classie.js"></script>
 <script src="components/eventEmitter/EventEmitter.js"></script>
 <script src="components/eventie/eventie.js"></script>
+<script src="components/doc-listener/doc-listener.js"></script>
 <script src="components/jquery/jquery.js"></script>
 <script src="components/jquery-ui-draggable/jquery-ui-draggable.js"></script>
 <script src="js/rect.js"></script>
