--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 <script src="components/matches-selector/matches-selector.js"></script>
 <script src="components/eventEmitter/EventEmitter.js"></script>
 <script src="components/eventie/eventie.js"></script>
+<script src="components/doc-listener/doc-listener.js"></script>
 <script src="js/rect.js"></script>
 <script src="js/packer.js"></script>
 <script src="js/item.js"></script>
