add selector string for placedElements

--- a/test/index.html
+++ b/test/index.html
@@ -70,6 +70,18 @@
     <div class="item"></div>
   </div>
 
+  <div id="placed3" class="container has-placed">
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="stamp stamp1"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="stamp stamp2"></div>
+    <div class="item"></div>
+  </div>
+
+
   <div id="adding" class="container">
     <div class="item"></div>
     <div class="item"></div>
