--- a/test/index.html
+++ b/test/index.html
@@ -47,7 +47,7 @@
     <div class="item"></div>
   </div>
 
-  <div id="placed1" class="container has-placed">
+  <div id="placed1" class="container has-placed place-stamps">
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
@@ -70,7 +70,18 @@
     <div class="item"></div>
   </div>
 
-  <div id="placed3" class="container has-placed">
+  <div id="placed3" class="container has-placed place-stamps">
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="stamp stamp1"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="stamp stamp2"></div>
+    <div class="item"></div>
+  </div>
+
+  <div id="placed4" class="container has-placed place-stamps">
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
