add selector string for columnWidth, rowHeight and gutter

--- a/test/index.html
+++ b/test/index.html
@@ -36,8 +36,14 @@
     <div><div class="item"></div></div>
   </div>
 
-  <div id="gridded" class="container">
+  <div id="gridded1" class="container gridded">
     <div class="grid-sizer"></div>
+    <div class="gutter-sizer"></div>
+  </div>
+
+  <div id="gridded2" class="container gridded">
+    <div class="grid-sizer"></div>
+    <div class="gutter-sizer"></div>
   </div>
 
   <div id="add-remove" class="container">
