--- a/test/index.html
+++ b/test/index.html
@@ -46,6 +46,11 @@
     <div class="gutter-sizer"></div>
   </div>
 
+  <div id="container-size" class="container">
+    <div class="item"></div>
+    <div class="item h2"></div>
+  </div>
+
   <div id="add-remove" class="container">
     <div class="item w2"></div>
     <div class="item h2"></div>
