split up getItems test and layout test

--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,17 @@
 
   <div id="empty" class="container"></div>
 
-  <div id="ex1" class="container">
+  <div id="default">
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+  </div>
+
+  <div id="filtered" class="container">
     <div class="item w2"></div>
     <div class="item h2"></div>
     <div class="item w2"></div>
@@ -29,11 +39,29 @@
     <div class="foobar"></div>
   </div>
 
-  <div id="ex2" class="container">
+  <div id="found" class="container">
     <div><div class="item w2"></div></div>
     <div><div class="item h2"></div></div>
     <div><div class="item w2"></div></div>
     <div><div class="item"></div></div>
+  </div>
+
+  <div id="filter-found" class="container">
+    <div class="item h2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="foobar"></div>
+    <div><div class="item w2"></div></div>
+    <div><div class="item"></div></div>
+  </div>
+
+  <div id="layout" class="container">
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
   </div>
 
   <div id="gridded1" class="container gridded">
