move examples to examples/

--- a/examples/draggable.html
+++ b/examples/draggable.html
@@ -80,19 +80,19 @@
 
   <div id="ex6" class="container"></div>
 
-<script src="components/get-style-property/get-style-property.js"></script>
-<script src="components/get-size/get-size.js"></script>
-<script src="components/matches-selector/matches-selector.js"></script>
-<script src="components/classie/classie.js"></script>
-<script src="components/eventEmitter/EventEmitter.js"></script>
-<script src="components/eventie/eventie.js"></script>
-<script src="components/doc-listener/doc-listener.js"></script>
-<script src="components/jquery/jquery.js"></script>
-<script src="components/jquery-ui-draggable/jquery-ui-draggable.js"></script>
-<script src="js/rect.js"></script>
-<script src="js/packer.js"></script>
-<script src="js/item.js"></script>
-<script src="js/packery.js"></script>
+<script src="../components/get-style-property/get-style-property.js"></script>
+<script src="../components/get-size/get-size.js"></script>
+<script src="../components/matches-selector/matches-selector.js"></script>
+<script src="../components/classie/classie.js"></script>
+<script src="../components/eventEmitter/EventEmitter.js"></script>
+<script src="../components/eventie/eventie.js"></script>
+<script src="../components/doc-ready/doc-ready.js"></script>
+<script src="../components/jquery/jquery.js"></script>
+<script src="../components/jquery-ui-draggable/jquery-ui-draggable.js"></script>
+<script src="../js/rect.js"></script>
+<script src="../js/packer.js"></script>
+<script src="../js/item.js"></script>
+<script src="../js/packery.js"></script>
 <script>
 
 function appendRandomSizedItems( container ) {
