--- a/examples/draggabilly-race-condition.html
+++ b/examples/draggabilly-race-condition.html
@@ -55,17 +55,18 @@
   </div>
 
 
-<script src="components/get-style-property/get-style-property.js"></script>
-<script src="components/get-size/get-size.js"></script>
-<script src="components/matches-selector/matches-selector.js"></script>
-<script src="components/eventie/eventie.js"></script>
-<script src="components/classie/classie.js"></script>
-<script src="components/eventEmitter/EventEmitter.js"></script>
-<script src="components/draggabilly/draggabilly.js"></script>
-<script src="js/rect.js"></script>
-<script src="js/packer.js"></script>
-<script src="js/item.js"></script>
-<script src="js/packery.js"></script>
+<script src="../components/get-style-property/get-style-property.js"></script>
+<script src="../components/get-size/get-size.js"></script>
+<script src="../components/matches-selector/matches-selector.js"></script>
+<script src="../components/eventie/eventie.js"></script>
+<script src="../components/classie/classie.js"></script>
+<script src="../components/eventEmitter/EventEmitter.js"></script>
+<script src="../components/draggabilly/draggabilly.js"></script>
+<script src="../components/doc-ready/doc-ready.js"></script>
+<script src="../js/rect.js"></script>
+<script src="../js/packer.js"></script>
+<script src="../js/item.js"></script>
+<script src="../js/packery.js"></script>
 <script>
 window.onload = function() {
 
