--- a/examples/index.html
+++ b/examples/index.html
@@ -187,16 +187,16 @@
     <div class="item w4"></div>
   </div>
 
-<script src="components/get-style-property/get-style-property.js"></script>
-<script src="components/get-size/get-size.js"></script>
-<script src="components/matches-selector/matches-selector.js"></script>
-<script src="components/eventEmitter/EventEmitter.js"></script>
-<script src="components/eventie/eventie.js"></script>
-<script src="components/doc-listener/doc-listener.js"></script>
-<script src="js/rect.js"></script>
-<script src="js/packer.js"></script>
-<script src="js/item.js"></script>
-<script src="js/packery.js"></script>
+<script src="../components/get-style-property/get-style-property.js"></script>
+<script src="../components/get-size/get-size.js"></script>
+<script src="../components/matches-selector/matches-selector.js"></script>
+<script src="../components/eventEmitter/EventEmitter.js"></script>
+<script src="../components/eventie/eventie.js"></script>
+<script src="../components/doc-ready/doc-ready.js"></script>
+<script src="../js/rect.js"></script>
+<script src="../js/packer.js"></script>
+<script src="../js/item.js"></script>
+<script src="../js/packery.js"></script>
 <script>
 
 function appendRandomSizedItems( container ) {
