--- a/examples/draggabilly.html
+++ b/examples/draggabilly.html
@@ -53,22 +53,9 @@
 <script src="../js/packer.js"></script>
 <script src="../js/item.js"></script>
 <script src="../js/packery.js"></script>
+
+<script src="examples.js"></script>
 <script>
-
-function appendRandomSizedItems( container ) {
-  var frag = document.createDocumentFragment();
-  for ( var i=0; i < 35; i++ ) {
-    var item = document.createElement('div');
-    item.className = 'item';
-    var w = Math.floor( Math.random() * Math.random() * 180 ) + 20;
-    var h = Math.floor( Math.random() * Math.random() * 180 ) + 20;
-    item.style.width  = w + 'px';
-    item.style.height = h + 'px';
-    frag.appendChild( item );
-  }
-
-  container.appendChild( frag );
-}
 
 function bindDraggies( packery ) {
   var draggies = [];
