--- a/examples/draggabilly.html
+++ b/examples/draggabilly.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Draggabilly Packery</title>
+  <title>Draggabilly</title>
 
   <link rel="stylesheet" href="examples.css" />
 
 </head>
 <body>
 
-  <h1>Packery</h1>
+  <h1>Draggabilly</h1>
 
   <div id="ex4" class="container fluid has-padding">
     <div class="item w4"></div>
