calc borders when sizing placed rect

--- a/test/index.html
+++ b/test/index.html
@@ -131,6 +131,14 @@
     <div class="item"></div>
   </div>
 
+  <h2>Placed borders</h2>
+
+  <div id="placed-borders" class="container has-placed">
+    <div class="stamp stamp1"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+  </div>
 
   <div id="adding" class="container">
     <div class="item"></div>
