add extra big tests

--- a/test/index.html
+++ b/test/index.html
@@ -64,6 +64,16 @@
     <div class="item"></div>
   </div>
 
+  <h2>Layout extra big</h2>
+
+  <div id="layout-extra-big" class="container">
+    <div class="item w5"></div>
+    <div class="item w2"></div>
+    <div class="item w5"></div>
+    <div class="item w2"></div>
+    <div class="item w2"></div>
+  </div>
+
   <div id="gridded1" class="container gridded">
     <div class="grid-sizer"></div>
     <div class="gutter-sizer"></div>
