--- a/test/index.html
+++ b/test/index.html
@@ -166,6 +166,21 @@
     <div class="item i7"></div>
   </div>
 
+  <h2>Fitting</h2>
+
+  <div id="fitting" class="container">
+    <div class="item i0"></div>
+    <div class="item i1"></div>
+    <div class="item i2"></div>
+    <div class="item i3"></div>
+    <div class="item i4"></div>
+    <div class="item i5"></div>
+    <div class="item i6"></div>
+    <div class="item i7"></div>
+  </div>
+
+  <h2>Declarative</h2>
+
   <div id="declarative" class="container js-packery">
     <div class="item w2"></div>
     <div class="item h2"></div>
