add consecutive test

--- a/test/index.html
+++ b/test/index.html
@@ -74,6 +74,15 @@
     <div class="item w2"></div>
   </div>
 
+  <h2>Consecutive</h2>
+
+  <div id="consecutive" class="container">
+    <div class="item i0"></div>
+    <div class="item i1"></div>
+    <div class="item i2"></div>
+    <div class="item i3"></div>
+  </div>
+
   <div id="gridded1" class="container gridded">
     <div class="grid-sizer"></div>
     <div class="gutter-sizer"></div>
@@ -181,17 +190,17 @@
 
   <h2>Declarative</h2>
 
-  <div id="declarative" class="container js-packery">
+  <!-- <div id="declarative" class="container js-packery">
     <div class="item w2"></div>
     <div class="item h2"></div>
     <div class="item w2"></div>
     <div class="item h2"></div>
     <div class="item"></div>
     <div class="item"></div>
-  </div>
+  </div> -->
 
   <!-- wrong quote marks for JSON -->
-  <div id="declarative-bad-json" class="container js-packery" data-packery-options="{ 'columnWidth': 30 }">
+  <!-- <div id="declarative-bad-json" class="container js-packery" data-packery-options="{ 'columnWidth': 30 }">
     <div class="item w2"></div>
     <div class="item h2"></div>
     <div class="item w2"></div>
@@ -207,7 +216,7 @@
     <div class="item h2"></div>
     <div class="item"></div>
     <div class="item"></div>
-  </div>
+  </div> -->
 
 <script src="../components/get-style-property/get-style-property.js"></script>
 <script src="../components/get-size/get-size.js"></script>
