add jQuery.bridget for jQuery plugin
add jquery-bridget as dependency

move basic examples to example/basics;
add jquery example

add examples/css with basics and examples.css

tick version

--- a/examples/draggabilly.html
+++ b/examples/draggabilly.html
@@ -5,7 +5,7 @@
 
   <title>Draggabilly</title>
 
-  <link rel="stylesheet" href="examples.css" />
+  <link rel="stylesheet" href="css/examples.css" />
 
 </head>
 <body>
