--- a/test/index.html
+++ b/test/index.html
@@ -218,6 +218,18 @@
     <div class="item"></div>
   </div>
 
+  <h2>jQuery</h2>
+
+  <div id="jquery" class="container">
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+  </div>
+
 <script src="../components/get-style-property/get-style-property.js"></script>
 <script src="../components/get-size/get-size.js"></script>
 <script src="../components/matches-selector/matches-selector.js"></script>
@@ -225,6 +237,8 @@
 <script src="../components/eventie/eventie.js"></script>
 <script src="../components/classie/classie.js"></script>
 <script src="../components/doc-ready/doc-ready.js"></script>
+<script src="../components/jquery/jquery.min.js"></script>
+<script src="../components/jquery-bridget/jquery.bridget.js"></script>
 <script src="../js/rect.js"></script>
 <script src="../js/packer.js"></script>
 <script src="../js/item.js"></script>
