--- a/examples/jquery.html
+++ b/examples/jquery.html
@@ -3,71 +3,15 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Packery</title>
+  <title>Packery with jQuery</title>
 
-  <link rel="stylesheet" href="examples.css" />
-
-<style>
-
-#ex5 .item {
-  margin-left: 1%;
-  margin-right: 1%;
-  width: 7.9%;
-}
-
-#ex5 .item.w2 { width: 17.9%; }
-#ex5 .item.w4 { width: 37.9%; }
-
-@media ( max-width: 800px ) {
-  body { background: red ;}
-
-  #ex5 .item    { width: 17.9%; }
-  #ex5 .item.w2 { width: 37.9%; }
-  #ex5 .item.w4 { width: 57.9%; }
-
-}
-
-.bogey {
-  background: red;
-  position: absolute;
-}
-
-#ex6 .bogey1 {
-  width: 30%;
-  height: 140px;
-  left: 20%;
-  top: 20px;
-}
-
-#ex6 .bogey2 {
-  width: 140px;
-  height: 180px;
-  right: 20px;
-  top: 140px;
-}
-
-#fit-demo {
-  width: 200px;
-}
-
-/*
-#fit-demo .item {
-  width: 40px;
-  height: 40px;
-}
-*/
-
-#fit-demo .item.gigante {
-  width:  150px;
-  height: 100px;
-}
-
-</style>
+  <link rel="stylesheet" href="css/examples.css" />
+  <link rel="stylesheet" href="css/basics.css" />
 
 </head>
 <body>
 
-  <h1>Packery</h1>
+  <h1>Packery with jQuery</h1>
 
   <div id="ex1" class="container">
     <div class="item w4"></div>
@@ -186,6 +130,7 @@
     <div class="item"></div>
   </div>
 
+<script src="../components/jquery/jquery.min.js"></script>
 <script src="../components/get-style-property/get-style-property.js"></script>
 <script src="../components/get-size/get-size.js"></script>
 <script src="../components/matches-selector/matches-selector.js"></script>
@@ -193,6 +138,7 @@
 <script src="../components/eventie/eventie.js"></script>
 <script src="../components/doc-ready/doc-ready.js"></script>
 <script src="../components/classie/classie.js"></script>
+<script src="../components/jquery-bridget/jquery.bridget.js"></script>
 <script src="../js/rect.js"></script>
 <script src="../js/packer.js"></script>
 <script src="../js/item.js"></script>
@@ -200,98 +146,83 @@
 
 <script src="examples.js"></script>
 <script>
+$( function() {
 
-window.onload = function() {
-  var ex1 = document.getElementById('ex1');
-  var packery1 = new Packery( ex1 );
+  $('#ex1').packery();
 
-  var ex2 = document.getElementById('ex2');
-  appendRandomSizedItems( ex2 );
-  var packery2 = new Packery( ex2 );
+  var $ex2 = $('#ex2');
+  appendRandomSizedItems( $ex2[0] );
+  $ex2.packery();
 
-  var ex3 = document.getElementById('ex3');
-  appendRandomSizedItems( ex3 );
-  var packery3 = new Packery( ex3, {
+  var $ex3 = $('#ex3');
+  appendRandomSizedItems( $ex3[0] );
+  $ex3.packery({
     columnWidth: 50,
     rowHeight: 50
   });
 
-  var ex4 = document.getElementById('ex4');
-  var packery4 = new Packery( ex4 );
+  $('#ex4').packery();
 
-  var ex5 = document.getElementById('ex5');
-  var packery5 = new Packery( ex5 );
+  $('#ex5').packery()
 
-  var ex6 = document.getElementById('ex6');
-  appendRandomSizedItems( ex6 );
-  var packery6 = new Packery( ex6, {
+  var $ex6 = $('#ex6');
+  appendRandomSizedItems( $ex6[0] );
+  $ex6.packery({
     itemSelector: '.item',
-    placedElements: ex6.querySelectorAll('.bogey')
+    placedElements: '.bogey'
   });
 
-  var ex7 = document.getElementById('ex7');
-  var packery7 = window.packery7 = new Packery( ex7 );
+  // ----- append and remove ----- //
 
-  var add7Button = document.getElementById('add-to-7');
+  var $ex7 = $('#ex7');
+  $ex7.packery();
 
-  add7Button.addEventListener( 'click', function( event ) {
-    var fragment = document.createDocumentFragment();
-    var items = [];
+  $('#add-to-7').click( function() {
+    var items = '';
     for ( var i=0; i < 3; i++ ) {
-      var item = document.createElement('div');
+    
       var wRand = Math.random();
       var widthClass = wRand > 0.85 ? 'w4' :
         wRand > 0.7 ? 'w2' : '';
       var hRand = Math.random();
       var heightClass = hRand > 0.85 ? 'h4' :
         hRand > 0.7 ? 'h2' : '';
-      item.className = 'item ' + widthClass + ' ' + heightClass;
-      fragment.appendChild( item );
-      items.push( item )
+      var className = 'item ' + widthClass + ' ' + heightClass;
+      var item = '<div class="' + className + '"></div>';
+      items += item;
     }
-    ex7.appendChild( fragment );
-    packery7.appended( items );
+    var $items = $( items );
+    $ex7.append( $items ).packery( 'appended', $items );
   });
 
-  ex7.addEventListener( 'click', function( event ) {
-    var elem = event.target;
-    if ( elem.className.indexOf('item') === -1 ) {
-      return;
-    }
-
-    packery7.remove( elem );
-    packery7.layout();
-
+  $ex7.on( 'click', '.item', function() {
+    $ex7.packery( 'remove', this ).packery();
   });
 
   // ----- fit demo ----- //
 
-  ( function() {
-    var container = document.querySelector('#fit-demo');
-    var pckry = new Packery( container );
+ ( function() {
+   var $elem = $('#fit-demo');
+   $elem.packery();
 
-    pckry.on( 'fitComplete', function( pckryInstance, item ) {
-      console.log('fit was completed ', item );
-    });
+   $elem.packery( 'on', 'fitComplete', function( pckryInstance, item ) {
+     console.log('fit was completed ');
+   });
 
-    eventie.bind( container, 'click', function( event ) {
-      // only care about item
-      var elem = event.target;
-      if ( !classie.has( elem, 'item' ) ) {
-        return;
-      }
+   $elem.on( 'click', '.item', function() {
+     var $this = $(this)
+     if ( !$this.hasClass('gigante') ) {
+       $this.addClass('gigante');
+       $elem.packery( 'fit', this );
+     } else {
+       $this.removeClass('gigante');
+       $elem.packery();
+     }
+   });
 
-      if ( !classie.has( elem, 'gigante') ) {
-        classie.add( elem, 'gigante' );
-        pckry.fit( elem );
-      } else {
-        classie.remove( elem, 'gigante' );
-        pckry.layout();
-      }
-    });
-  })();
+ })();
 
-};
+});
 </script>
 
 </body>
