--- a/examples/basics.html
+++ b/examples/basics.html
@@ -3,71 +3,18 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Packery</title>
+  <title>Packery basic examples</title>
 
-  <link rel="stylesheet" href="examples.css" />
-  <link rel="stylesheet" href="basics.css" />
+  <link rel="stylesheet" href="css/examples.css" />
+  <link rel="stylesheet" href="css/basics.css" />
 <style>
-
-#ex5 .item {
-  margin-left: 1%;
-  margin-right: 1%;
-  width: 7.9%;
-}
-
-#ex5 .item.w2 { width: 17.9%; }
-#ex5 .item.w4 { width: 37.9%; }
-
-@media ( max-width: 800px ) {
-  body { background: red ;}
-
-  #ex5 .item    { width: 17.9%; }
-  #ex5 .item.w2 { width: 37.9%; }
-  #ex5 .item.w4 { width: 57.9%; }
-
-}
-
-.bogey {
-  background: red;
-  position: absolute;
-}
-
-#ex6 .bogey1 {
-  width: 30%;
-  height: 140px;
-  left: 20%;
-  top: 20px;
-}
-
-#ex6 .bogey2 {
-  width: 140px;
-  height: 180px;
-  right: 20px;
-  top: 140px;
-}
-
-#fit-demo {
-  width: 200px;
-}
-
-/*
-#fit-demo .item {
-  width: 40px;
-  height: 40px;
-}
-*/
-
-#fit-demo .item.gigante {
-  width:  150px;
-  height: 100px;
-}
 
 </style>
 
 </head>
 <body>
 
-  <h1>Packery</h1>
+  <h1>Packery basic examples</h1>
 
   <div id="ex1" class="container">
     <div class="item w4"></div>
