"place" -> "stamp"; rename method and properties

--- a/test/index.html
+++ b/test/index.html
@@ -105,7 +105,7 @@
     <div class="item"></div>
   </div>
 
-  <div id="placed1" class="container has-placed place-stamps">
+  <div id="stamped1" class="container has-stamps place-stamps">
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
@@ -116,7 +116,7 @@
     <div class="item"></div>
   </div>
 
-  <div id="placed2" class="container has-placed">
+  <div id="stamped2" class="container has-stamps">
     <div class="item stamp stamp1"></div>
     <div class="item"></div>
     <div class="item"></div>
@@ -128,7 +128,7 @@
     <div class="item"></div>
   </div>
 
-  <div id="placed3" class="container has-placed place-stamps">
+  <div id="stamped3" class="container has-stamps place-stamps">
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
@@ -139,7 +139,7 @@
     <div class="item"></div>
   </div>
 
-  <div id="placed4" class="container has-placed place-stamps">
+  <div id="stamped4" class="container has-stamps place-stamps">
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
@@ -152,7 +152,7 @@
 
   <h2>Placed borders</h2>
 
-  <div id="placed-borders" class="container has-placed">
+  <div id="stamped-borders" class="container has-stamps">
     <div class="stamp stamp1"></div>
     <div class="item"></div>
     <div class="item"></div>
