--- a/test/index.html
+++ b/test/index.html
@@ -230,6 +230,28 @@
     <div class="item h2"></div>
   </div>
 
+  <h2>isInitLayout option</h2>
+  <div id="is-init-layout" class="container">
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+  </div>
+
+  <!-- <h2>isLayoutInstant option</h2>
+  <div id="is-layout-instant" class="container">
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+  </div> -->
+
 <script src="../components/get-style-property/get-style-property.js"></script>
 <script src="../components/get-size/get-size.js"></script>
 <script src="../components/matches-selector/matches-selector.js"></script>
