break up test-packery.js into multiple files

--- a/test/index.html
+++ b/test/index.html
@@ -266,10 +266,25 @@
 <script src="../js/item.js"></script>
 <script src="../js/packery.js"></script>
 
-
+<script src="helpers.js"></script>
 <script src="test-rect.js"></script>
 <script src="test-packer.js"></script>
-<script src="test-packery.js"></script>
+<script src="basics.js"></script>
+<script src="defaults-empty.js"></script>
+<script src="get-items.js"></script>
+<script src="layout.js"></script>
+<script src="layout-extra-big.js"></script>
+<script src="consecutive.js"></script>
+<script src="grid.js"></script>
+<script src="container-size.js"></script>
+<script src="remove.js"></script>
+<script src="stamped.js"></script>
+<script src="add-items.js"></script>
+<script src="draggable.js"></script>
+<script src="fit.js"></script>
+<script src="jquery-plugin.js"></script>
+<script src="declarative.js"></script>
+<script src="is-init-layout.js"></script>
 
 </body>
 </html>
