add prepend test; Ref #7

--- a/test/index.html
+++ b/test/index.html
@@ -159,7 +159,16 @@
     <div class="item"></div>
   </div>
 
+  <h2>Adding</h2>
+
   <div id="adding" class="container">
+    <div class="item"></div>
+    <div class="item"></div>
+  </div>
+
+  <h2>Prepend</h2>
+
+  <div id="prepend" class="container">
     <div class="item"></div>
     <div class="item"></div>
   </div>
@@ -269,6 +278,7 @@
 <script src="helpers.js"></script>
 <script src="test-rect.js"></script>
 <script src="test-packer.js"></script>
+
 <script src="basics.js"></script>
 <script src="defaults-empty.js"></script>
 <script src="get-items.js"></script>
@@ -280,6 +290,7 @@
 <script src="remove.js"></script>
 <script src="stamped.js"></script>
 <script src="add-items.js"></script>
+<script src="prepend.js"></script>
 <script src="draggable.js"></script>
 <script src="fit.js"></script>
 <script src="jquery-plugin.js"></script>
