update getSize which returns zeroSpace for hiddens fixes #13

--- a/test/index.html
+++ b/test/index.html
@@ -261,6 +261,13 @@
     <div class="item h2"></div>
   </div> -->
 
+  <div id="hidden-items" class="container">
+    <div class="item w2 h2 hidden"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+  </div>
+
 <script src="../components/get-style-property/get-style-property.js"></script>
 <script src="../components/get-size/get-size.js"></script>
 <script src="../components/matches-selector/matches-selector.js"></script>
@@ -296,6 +303,7 @@
 <script src="jquery-plugin.js"></script>
 <script src="declarative.js"></script>
 <script src="is-init-layout.js"></script>
+<script src="hidden-items.js"></script>
 
 </body>
 </html>
