stamping with Outlayer

--- a/examples/basics.html
+++ b/examples/basics.html
@@ -157,7 +157,7 @@ window.onload = function() {
   appendRandomSizedItems( ex6 );
   var packery6 = new Packery( ex6, {
     itemSelector: '.item',
-    placedElements: ex6.querySelectorAll('.bogey')
+    stamp: ex6.querySelectorAll('.bogey')
   });
 
   // ----- fit demo ----- //
