add outlayer scripts to examples

--- a/examples/add-remove.html
+++ b/examples/add-remove.html
@@ -37,6 +37,8 @@
 <script src="../bower_components/eventie/eventie.js"></script>
 <script src="../bower_components/doc-ready/doc-ready.js"></script>
 <script src="../bower_components/classie/classie.js"></script>
+<script src="../bower_components/outlayer/item.js"></script>
+<script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
 <script src="../js/packer.js"></script>
 <script src="../js/packery.js"></script>
