--- a/examples/jquery.html
+++ b/examples/jquery.html
@@ -139,10 +139,12 @@
 <script src="../bower_components/doc-ready/doc-ready.js"></script>
 <script src="../bower_components/classie/classie.js"></script>
 <script src="../bower_components/jquery-bridget/jquery.bridget.js"></script>
+<script src="../bower_components/outlayer/item.js"></script>
+<script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
 <script src="../js/packer.js"></script>
-<script src="../js/item.js"></script>
 <script src="../js/packery.js"></script>
+<script src="../js/item.js"></script>
 
 <script src="examples.js"></script>
 <script>
@@ -169,7 +171,7 @@ $( function() {
   appendRandomSizedItems( $ex6[0] );
   $ex6.packery({
     itemSelector: '.item',
-    placedElements: '.bogey'
+    stamp: '.bogey'
   });
 
   // ----- append and remove ----- //
