--- a/examples/draggabilly.html
+++ b/examples/draggabilly.html
@@ -54,10 +54,12 @@
 <script src="../bower_components/eventEmitter/EventEmitter.js"></script>
 <script src="../bower_components/doc-ready/doc-ready.js"></script>
 <script src="../bower_components/draggabilly/draggabilly.js"></script>
+<script src="../bower_components/outlayer/item.js"></script>
+<script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
 <script src="../js/packer.js"></script>
-<script src="../js/item.js"></script>
 <script src="../js/packery.js"></script>
+<script src="../js/item.js"></script>
 
 <script src="examples.js"></script>
 <script>
