--- a/examples/jquery-ui-draggable.html
+++ b/examples/jquery-ui-draggable.html
@@ -51,10 +51,12 @@
 <script src="../bower_components/jquery/jquery.min.js"></script>
 <script src="../bower_components/jquery-ui-draggable/jquery-ui-draggable.js"></script>
 <script src="../bower_components/jquery-bridget/jquery.bridget.js"></script>
+<script src="../bower_components/outlayer/item.js"></script>
+<script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
 <script src="../js/packer.js"></script>
-<script src="../js/item.js"></script>
 <script src="../js/packery.js"></script>
+<script src="../js/item.js"></script>
 <script src="examples.js"></script>
 <script>
 $( function() {
