update draggabilly race condition

--- a/examples/draggabilly-race-condition.html
+++ b/examples/draggabilly-race-condition.html
@@ -93,13 +93,13 @@ window.onload = function() {
   b1.style.left = '11px';
   b1.style.top = '-14px';
   packery4.itemDragMove( b1, 11, -14 );
-  packery4.itemDragStop( b1 );
+  packery4.itemDragEnd( b1 );
 
   packery4.itemDragStart( b2 );
   b2.style.left = '141px';
   b2.style.top = '-14px';
   packery4.itemDragMove( b2, 141, -14 );
-  packery4.itemDragStop( b2 );
+  packery4.itemDragEnd( b2 );
 
 };
 </script>
