--- a/test/index.html
+++ b/test/index.html
@@ -277,6 +277,8 @@
 <script src="../bower_components/doc-ready/doc-ready.js"></script>
 <script src="../bower_components/jquery/jquery.min.js"></script>
 <script src="../bower_components/jquery-bridget/jquery.bridget.js"></script>
+<script src="../bower_components/outlayer/item.js"></script>
+<script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
 <script src="../js/packer.js"></script>
 <script src="../js/packery.js"></script>
