updated page title/header

--- a/examples/add-remove-horizontal.html
+++ b/examples/add-remove-horizontal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>add/remove</title>
+  <title>add/remove horizontal layout</title>
 
   <link rel="stylesheet" href="css/examples.css" />
   <link rel="stylesheet" href="css/basics.css" />
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <h1>add/remove</h1>
+  <h1>add/remove horizontal layout</h1>
 
   <p>
     <button id="append">Append items</button>
