--- a/examples/draggabilly.html
+++ b/examples/draggabilly.html
@@ -10,6 +10,10 @@
   .item.expanded {
     width: 100% !important;
   }
+
+  #horiz {
+    height: 360px;
+  }
   </style>
 
 </head>
@@ -45,6 +49,33 @@
 
 
   <div id="ex6" class="container fluid has-padding"></div>
+
+  <div id="horiz" class="container has-padding">
+    <div class="item w4"></div>
+    <div class="item h4"></div>
+    <div class="item w2"></div>
+    <div class="item h4"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+    <div class="item w4"></div>
+    <div class="item w2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item w2 h2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item h4"></div>
+    <div class="item"></div>
+    <div class="item w4"></div>
+    <div class="item"></div>
+    <div class="item w2"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+  </div>
+
 
 <script src="../bower_components/get-style-property/get-style-property.js"></script>
 <script src="../bower_components/get-size/get-size.js"></script>
@@ -140,6 +171,16 @@ window.onload = function() {
 
 
   bindDraggies( packery6 );
+
+  ( function() {
+    var pckry = new Packery( '#horiz', {
+      columnWidth: 50,
+      rowHeight: 50,
+      isHorizontal: true,
+      transitionDuration: '0.8s'
+    });
+    bindDraggies( pckry );
+  })();
 
 };
 </script>
