add sub-pixel fit test; Ref #227, #42

--- a/test/index.html
+++ b/test/index.html
@@ -268,6 +268,15 @@
     <div class="item"></div>
   </div>
 
+  <h2>Sub-pixel fit</h2>
+
+  <div id="sub-pixel-fit" class="container">
+    <div class="grid-sizer"></div>
+    <div class="item"></div>
+    <div class="item w2"></div>
+    <div class="item w2"></div>
+  </div>
+
 <script src="../bower_components/get-style-property/get-style-property.js"></script>
 <script src="../bower_components/get-size/get-size.js"></script>
 <script src="../bower_components/matches-selector/matches-selector.js"></script>
@@ -306,6 +315,7 @@
 <script src="declarative.js"></script>
 <script src="is-init-layout.js"></script>
 <script src="hidden-items.js"></script>
+<script src="sub-pixel-fit.js"></script>
 
 </body>
 </html>
