Upgrade to Outlayer v1.4; add fizzy-ui-utils
change bower.json main to packery.js
changelog
fix tests to pass

--- a/sandbox/horizontal.html
+++ b/sandbox/horizontal.html
@@ -126,6 +126,7 @@
 <script src="../bower_components/eventie/eventie.js"></script>
 <script src="../bower_components/doc-ready/doc-ready.js"></script>
 <script src="../bower_components/classie/classie.js"></script>
+<script src="../bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="../bower_components/outlayer/item.js"></script>
 <script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
