--- a/sandbox/draggabilly-race-condition.html
+++ b/sandbox/draggabilly-race-condition.html
@@ -63,6 +63,7 @@
 <script src="../bower_components/eventEmitter/EventEmitter.js"></script>
 <script src="../bower_components/draggabilly/draggabilly.js"></script>
 <script src="../bower_components/doc-ready/doc-ready.js"></script>
+<script src="../bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="../bower_components/outlayer/item.js"></script>
 <script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
