--- a/sandbox/jquery-ui-draggable.html
+++ b/sandbox/jquery-ui-draggable.html
@@ -51,6 +51,7 @@
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/jquery-ui-draggable/jquery-ui-draggable.js"></script>
 <script src="../bower_components/jquery-bridget/jquery.bridget.js"></script>
+<script src="../bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="../bower_components/outlayer/item.js"></script>
 <script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
