--- a/test/index.html
+++ b/test/index.html
@@ -286,6 +286,7 @@
 <script src="../bower_components/doc-ready/doc-ready.js"></script>
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/jquery-bridget/jquery.bridget.js"></script>
+<script src="../bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="../bower_components/outlayer/item.js"></script>
 <script src="../bower_components/outlayer/outlayer.js"></script>
 <script src="../js/rect.js"></script>
