move test .js to test/unit/

--- a/test/index.html
+++ b/test/index.html
@@ -295,28 +295,29 @@
 <script src="../js/packery.js"></script>
 
 <script src="helpers.js"></script>
-<script src="test-rect.js"></script>
-<script src="test-packer.js"></script>
 
-<script src="basics.js"></script>
-<script src="defaults-empty.js"></script>
-<script src="get-items.js"></script>
-<script src="layout.js"></script>
-<script src="layout-extra-big.js"></script>
-<script src="consecutive.js"></script>
-<script src="grid.js"></script>
-<script src="container-size.js"></script>
-<script src="remove.js"></script>
-<script src="stamped.js"></script>
-<script src="add-items.js"></script>
-<script src="prepend.js"></script>
-<script src="draggable.js"></script>
-<script src="fit.js"></script>
-<script src="jquery-plugin.js"></script>
-<script src="declarative.js"></script>
-<script src="is-init-layout.js"></script>
-<script src="hidden-items.js"></script>
-<script src="sub-pixel-fit.js"></script>
+<script src="unit/test-rect.js"></script>
+<script src="unit/test-packer.js"></script>
+
+<script src="unit/basics.js"></script>
+<script src="unit/defaults-empty.js"></script>
+<script src="unit/get-items.js"></script>
+<script src="unit/layout.js"></script>
+<script src="unit/layout-extra-big.js"></script>
+<script src="unit/consecutive.js"></script>
+<script src="unit/grid.js"></script>
+<script src="unit/container-size.js"></script>
+<script src="unit/remove.js"></script>
+<script src="unit/stamped.js"></script>
+<script src="unit/add-items.js"></script>
+<script src="unit/prepend.js"></script>
+<script src="unit/draggable.js"></script>
+<script src="unit/fit.js"></script>
+<script src="unit/jquery-plugin.js"></script>
+<script src="unit/declarative.js"></script>
+<script src="unit/is-init-layout.js"></script>
+<script src="unit/hidden-items.js"></script>
+<script src="unit/sub-pixel-fit.js"></script>
 
 </body>
 </html>
